backend/swag: add swagged docks to new handlers
also minor fix to routre
