# backend/cmd/api/favouritemovie.go
@@ -7,6 +7,19 @@ import (
 	"github.com/vladgrskkh/movie_recomendation_system/internal/data"
 )
 
+// likeMovieHandler godoc
+//
+// @Summary Like a movie
+// @Description Functionality for liking movie
+// @Tags movies
+// @Accept json
+// @Produce json
+// @Success 201 {object} map[string]string "OK | Example {"message": "successfully liked movie"}
+// @Failure 400 {object} map[string]string "Bad Request | Example {"error": "body contains badly-formated JSON"}"
+// @Failure 403 {object} map[string]string "Forbidden | Example {"error": "your account must be activated to access this resourse"}"
+// @Failure 500 {object} map[string]string "Internal Server Error | Example {"error": "server encountered a problem and could not process your request"}"
+// @Security BearerAuth
+// @Router /movies/{movieID}/like [put]
 func (app *application) likeMovieHandler(w http.ResponseWriter, r *http.Request) {
 	movieID, err := app.readIDParam(r)
 	if err != nil {
@@ -30,10 +43,24 @@ func (app *application) likeMovieHandler(w http.ResponseWriter, r *http.Request)
 	}
 }
 
+// unlikeMovieHandler godoc
+//
+// @Summary Like a movie
+// @Description Functionality for liking movie
+// @Tags movies
+// @Accept json
+// @Produce json
+// @Success 201 {object} map[string]string "OK | Example {"message": "successfully unliked movie"}
+// @Failure 400 {object} map[string]string "Bad Request | Example {"error": "body contains badly-formated JSON"}"
+// @Failure 403 {object} map[string]string "Forbidden | Example {"error": "your account must be activated to access this resourse"}"
+// @Failure 404 {object} map[string]string "Not Found | Example {"error": "requested resource could not be found"}"
+// @Failure 500 {object} map[string]string "Internal Server Error | Example {"error": "server encountered a problem and could not process your request"}"
+// @Security BearerAuth
+// @Router /movies/{movieID}/unlike [put]
 func (app *application) unlikeMovieHandler(w http.ResponseWriter, r *http.Request) {
 	movieID, err := app.readIDParam(r)
 	if err != nil {
-		app.serverErrorResponse(w, r, err)
+		app.badRequestResponse(w, r, err)
 		return
 	}
 
